[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/DuckPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Art/duck_walk.png" type="Texture" id=3]
[ext_resource path="res://Sounds/world_transition.wav" type="AudioStream" id=4]
[ext_resource path="res://ObjectScenes/Interactable.tscn" type="PackedScene" id=6]
[ext_resource path="res://ObjectScenes/DialoguePlayer.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 500, 9 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 500, 9 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 500, 9 )

[node name="TestWorld" type="Node2D"]
script = ExtResource( 2 )
level_name = "Test"

[node name="MapBoundaries" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2( 500, 0 )
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2( 0, 500 )
rotation = 1.5708
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2( 1000, 500 )
rotation = 1.5708
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2( 500, 1000 )
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Interactable" parent="." instance=ExtResource( 6 )]

[node name="DialogueArea" parent="Interactable" index="0"]
position = Vector2( 100, 0 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" parent="Interactable/DialogueArea" index="0"]
position = Vector2( 540, 505 )

[node name="Sprite" type="Sprite" parent="Interactable/DialogueArea/CollisionShape2D" index="0"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 500, 500 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 1000
editor_draw_limits = true

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="DuckPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 500, 500 )

[node name="DialoguePlayer" parent="." instance=ExtResource( 7 )]
scene_text_file = "res://JsonDialogue/DialogueTest.json"

[node name="WorldSwitchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[editable path="Interactable"]
